--- a/admin/config.json
+++ b/admin/config.json
@@ -1,6 +1,6 @@
 {
   "ownerNumber": ["6282347260729@s.whatsapp.net"],
-  "namabot":"MYBOT",
-  "namaowner":"AYAM-GORENG"
+  "namabot":"Rika Chan",
+  "namaowner":"❤"
 }
 
